Finished reimplementing issue #1